# mangrove

./: .travis.yml  ChangeLog.md  Dockerfile  Dockerfile.builder  LICENSE  Makefile  README.md  cabal.project  mangrove.cabal  package.yaml  stack.yaml
.github/workflows/: run-tests.yml
app/: Main.hs  config.example.yaml
benchmark/: cli.hs
example/: client.hs
src/: Mangrove.hs
src/Mangrove/: Server.hs  Store.hs  Streaming.hs  Types.hs  Utils.hs
src/Mangrove/Server/: Response.hs
test/: Spec.hs
test/Test/: StoreSpec.hs
