cabal-version:      2.2
name:               mangrove
version:            0.0.0.0
synopsis:           Mangrove is a database management server with some other facilities.
description:        Please see the README on GitHub at
                    <https://github.com/hstream-io/mangrove#readme>
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2020 EMQ Technologies Co., Ltd.
author:             Commelina
maintainer:         maosics@gmail.com
tested-with:        GHC == 8.8.3, GHC == 8.8.1, GHC == 8.6.5
category:           Database
homepage:           https://github.com/hstream-io/mangrove
bug-reports:        https://github.com/hstream-io/mangrove/issues
build-type:         Simple
extra-source-files: README.md
                    ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/hstream-io/mangrove

flag benchmark-cli
  default:     False
  description: Build benchmark command line tools

library
  exposed-modules:  Mangrove
                    Mangrove.Store
                    Mangrove.Streaming
                    Mangrove.Utils
  other-modules:    Mangrove.Server
                    Mangrove.Server.Response
                    Mangrove.Types
  hs-source-dirs:   src
  build-depends:    base                 >= 4.9 && < 5
                  , aeson                >= 1.0
                  , bytestring
                  , case-insensitive
                  , co-log
                  , containers
                  , deepseq
                  , exceptions
                  , hashable
                  , hesp
                  , log-store
                  , monad-control        ^>= 1.0
                  , mtl
                  , network              >= 3.1.1
                  , streamly
                  , streamly-bytestring  >= 0.1.2
                  , text
                  , time
                  , transformers
                  , transformers-base
                  , unordered-containers
                  , uuid
                  , vector
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates
                    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

executable mangrove
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base      >= 4.9 && < 5
                  , co-log
                  , directory
                  , hesp
                  , log-store
                  , mangrove
                  , mtl
                  , network   >= 3.1.1
                  , text
                  , vector
                  , yaml      >= 0.11
  default-language: Haskell2010
  ghc-options:      -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
                    -threaded -feager-blackholing -rtsopts

executable mangrove-benchmark-cli
  main-is:          benchmark/cli.hs
  build-depends:    base                 >= 4.9 && < 5
                  , bytestring
                  , hesp
                  , network              >= 3.1.1
                  , optparse-applicative ^>= 0.15
                  , text
                  , time
                  , uuid
                  , vector
  default-language: Haskell2010
  ghc-options:      -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
                    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
                    -threaded -rtsopts

  if !flag(benchmark-cli)
    buildable: False

test-suite mangrove-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      Test.StoreSpec
  hs-source-dirs:     test
  build-depends:      base       >= 4.9 && < 5
                    , bytestring
                    , hspec
                    , log-store
                    , mangrove
                    , mtl
                    , network    >= 3.1.1
                    , temporary
                    , text
                    , time
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
